--- a/custom_connection_measurer/build.gradle
+++ b/custom_connection_measurer/build.gradle
@@ -1,16 +1,17 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 24
     buildToolsVersion "25.0.0"
 
     defaultConfig {
-        applicationId "com.example.automation.mobilesignalmeasurer"
         minSdkVersion 9
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
     }
     buildTypes {
         release {
@@ -27,7 +28,4 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
-    compile project(path: ':mobile_signal_strength_measurer')
-    compile project(path: ':connection_rate_tester')
-    compile project(path: ':custom_connection_measurer')
 }
