--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':mobile_signal_strength_measurer', ':connection_rate_tester', ':custom_connection_measurer'
+include ':app', ':mobile_signal_strength_measurer', ':custom_connection_measurer'
